--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -24,6 +24,8 @@ dev_dependencies:
   build_runner: ^2.1.8
   json_serializable: ^6.1.5
   flutter_svg: ^1.0.3
+  badges: ^2.0.2
+  tab_indicator_styler: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -43,9 +45,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
