--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -15,10 +15,11 @@ dependencies:
   flutter_bloc: ^8.0.1
   json_annotation: ^4.4.0
   freezed_annotation: ^1.1.0
-  sqflite: ^2.0.2
+  hive: ^2.1.0
   cupertino_icons: ^1.0.2
   extended_image: ^6.0.2+1
   shimmer: ^2.0.0
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
