--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   extended_image: ^6.0.2+1
   shimmer: ^2.0.0
   path_provider: ^2.0.9
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
