--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shimmer: ^2.0.0
   path_provider: ^2.0.9
   get_it: ^7.2.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
